# Spotify_Textualize

./: .cache  .gitignore  README.md  config_helper.py  input.md  main.py  main_page.tcss  playlist.json  pyproject.toml  spotify_functions.py  spotify_main_class.py  stuff.json  testing.txt  tracks.txt
spotify_textualize.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: binds.config  config_helper.py  main.py  main_page.tcss  spotify_functions.py  spotify_main_class.py  test.py
src/spotify_textualize.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
