[project]
name = "spotify-textualize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymemcache>=4.0.0",
    "spotipy[pymemcache]>=2.24.0",
    "textual==0.85.1",
    "pytest>=8.3.3",
    "pytest-textual-snapshot>=1.0.0",
    "pytest-asyncio>=0.24.0",
    "pyyaml>=6.0.2",
]
